# PDF-to-DXF

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  README.md  pyproject.toml  requirements.txt  start.ps1  vercel.json  windows_app.py  windows_app.spec  windows_native_app.py  windows_native_app.spec
.github/workflows/: windows-desktop.yml  windows-release.yml
api/: index.py
docs/: code-signing-plan.md  native-app-manual-qa.md  native-app-risk-quality-plan.md  project-working-process.md  release-process.md  release-rehearsals.md
examples/: convert_api.ps1  make_sample_pdf.py
installer/: pdf-to-dxf.iss
pdf_to_dxf/: __init__.py  __main__.py  app_info.py  converter.py  dxf_writer.py  server.py  vercel_app.py
pdf_to_dxf/static/: index.html
scripts/: build_windows_installer.ps1  make_app_icon.py  make_native_qa_fixtures.py  qa_release_artifacts.py  smoke_native_app.py  validate_installer_assets.py  validate_release_version.py  validate_signing_config.py  verify_authenticode_signatures.ps1
tests/: smoke.ps1  test_converter.py  test_native_qa_fixtures.py  test_release_artifact_qa.py  test_release_version.py  test_signing_config.py  test_windows_native_app.py
